# zed-go-profile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-16-go-profile-lsp-implementation.md
docs/superpowers/specs/: 2026-03-16-go-profile-zed-extension-design.md
extension/: Cargo.toml  LICENSE  extension.toml
extension/languages/go/: config.toml
extension/src/: lib.rs
lsp-server/: Cargo.toml  build.rs
lsp-server/proto/: profile.proto
lsp-server/src/: analysis.rs  config.rs  diagnostics.rs  format.rs  hints.rs  lenses.rs  main.rs  paths.rs  profile.rs  server.rs  watch.rs
