[package]
name = "go-profile-lsp"
version = "0.0.1"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
